--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Break Out</title>
+  <link rel="icon" href="data:;base64,iVBORw0KGgo=">
   <style>
     html, body {
       margin: 0;
