--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
     <li>공 모션</li>
     <li><del><strong>breakOut -> this 변경</strong> : this 로 변경시 requestAnimationFrame 에서 정의되지 않은 함수 오류 발생. 그래서 constructor 에 this 정의하여 사용</del></li>
     <li><strong><del>전체 class에 넣기</del></strong></li>
-    <li><strong>초기화 함수 및 공통 함수 만들기</strong></li>
+    <li><strong><del>초기화 함수 및 공통 함수 만들기</del></strong></li>
     <li><strong><del>js 파일로 분리</del></strong></li>
   </ul>
 
